solved simple layout bug

--- a/assets/css/endeavor.styl
+++ b/assets/css/endeavor.styl
@@ -1155,6 +1155,10 @@ p.center-caption
 	width 40%
 	
 
+.endeavor-width-45-prcnt
+	width 45%
+	
+
 .endeavor-width-60-prcnt
 	width 60%
 	
@@ -1538,7 +1542,7 @@ p.center-caption
 		font-size 48px
 		
 	.endeavor-width-100vw
-		left calc((100vw - 85vw) / -2) // 85~ Contents relative width
+		left calc((102vw - 85vw) / -2) // 102vw width | 85~ Contents relative width
 		
 
 /* ----------- Retina Screens ----------- */
@@ -1547,7 +1551,7 @@ p.center-caption
 		font-size 48px
 		
 	.endeavor-width-100vw
-		left calc((100vw - 85vw) / -2) // 85~ Contents relative width	
+		left calc((102vw - 85vw) / -2) // 102vw width | 85~ Contents relative width	
 		
 
 /*---------------------------------------------------------------*/
@@ -1881,6 +1885,9 @@ p.center-caption
 	.endeavor-padding-25-tablet
 		padding 25px
 		
+	.endeavor-padding-100-left-tablet
+		padding-left 100px
+		
 
 /* ----------- Retina Screens ----------- */
 @media screen and (max-width: 768px) and (min-resolution: 2dppx) and (min-resolution: 192dpi)
@@ -1988,6 +1995,9 @@ p.center-caption
 		
 	.endeavor-padding-25-tablet
 		padding 25px
+		
+	.endeavor-padding-100-left-tablet
+		padding-left 100px
 
 
 /* ----------- Retina Screens ----------- */
